--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/codeStyles/codeStyleConfig.xml
+.idea/vcs.xml
+.idea/watcherTasks.xml
+.idea/inspectionProfiles/Project_Default.xml
